--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %} Academic Portal {% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/style.css')}}">
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +15,44 @@
         {% endblock %}
     </head>
     <body>
+        {% block navigation %}
+            <nav class="navbar navbar-expand navbar-light bg-light">
+                <ul class="nav navbar-nav">
+                     <li class="nav-item active">
+                        <h2><a class="nav-link" href="{{ path('home') }}">Home</a></h2>
+                    </li>
+                    <li class="nav-item active">
+                        <h2><a class="nav-link" href="{{ path('view_course_list') }}">Course</a></h2>
+                    </li>
+                    <li class="nav-item">
+                        <h2><a class="nav-link" href="{{ path('view_lecturer_list') }}">Lecturer</a></h2>
+                    </li>
+                    <li class="nav-item">
+                        <h2><a class="nav-link" href="{{ path('view_class_list') }}">Class</a></h2>
+                    </li>
+                    <li class="nav-item">
+                        <h2><a class="nav-link" href="{{ path('app_logout') }}">Logout 
+                          <i>({{ app.user.username }})</i>
+                        </a></h2>
+                    </li>
+                </ul>
+            </nav>
+        {% endblock %}
+        {% block message %}
+        <div class="container col-md-10 text-center mb-3 mt-4">
+            {% for error in app.session.flashBag.get('Error') %}
+                <p class="alert alert-danger">{{ error }} </p>
+            {% endfor %}
+            {% for success in app.session.flashBag.get('Success') %}
+                <p class="alert alert-success">{{ success }} </p>
+        </div>
+        {% endfor %}
+        {% endblock %}
         {% block body %}{% endblock %}
+        {% block footer %}
+        <div class="container fluid col-md-10 text-center mt-5">
+            <p class="text text-bg-light">Demo web project - 2022 </p>
+        </div>
+        {% endblock %}
     </body>
 </html>
